[tool.poetry]
name = "advanced-rag-flows"
version = "0.1.0"
description = ""
authors = ["Stephane Remigereau <sremigere@gmail.com>"]
readme = "README.md"
packages = [{include = "graph"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
langchain = "^0.2.16"
langgraph = "^0.2.18"
langchainhub = "^0.1.21"
langchain-community = "^0.2.16"
tavily-python = "^0.4.0"
langchain-chroma = "^0.1.3"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.23"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"